Use model in a streaming mode and aggregate count on positive and negative tweets.

--- a/spark_ml/notebooks/apply_model.ipynb
+++ b/spark_ml/notebooks/apply_model.ipynb
@@ -40,8 +40,8 @@
       "text/plain": [
        "inputStreamPath = /home/jovyan/data/events-stream\n",
        "modelPath = /home/jovyan/models/spark-ml-model\n",
-       "dataSchema = StructType(StructField(timestamp,TimestampType,true), StructField(tweet,StringType,true))\n",
-       "inputDF = [timestamp: timestamp, tweet: string]\n"
+       "dataSchema = StructType(StructField(tweet,StringType,true))\n",
+       "inputDF = [tweet: string, timestamp: timestamp]\n"
       ]
      },
      "metadata": {},
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "[timestamp: timestamp, tweet: string]"
+       "[tweet: string, timestamp: timestamp]"
       ]
      },
      "execution_count": 3,
@@ -63,14 +63,14 @@
     "val modelPath = \"/home/jovyan/models/spark-ml-model\"\n",
     "\n",
     "val dataSchema = new StructType()\n",
-    "    .add(\"timestamp\", TimestampType)\n",
     "    .add(\"tweet\", StringType)\n",
     "\n",
     "val inputDF = spark\n",
     "    .readStream\n",
     "    .schema(dataSchema)\n",
     "    .option(\"maxFilesPerTrigger\", 1)\n",
-    "    .json(inputStreamPath)"
+    "    .json(inputStreamPath)\n",
+    "    .withColumn(\"timestamp\", lit(current_timestamp()))"
    ]
   },
   {
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "predictionsDF = [timestamp: timestamp, tweet: string ... 6 more fields]\n"
+       "predictionsDF = [tweet: string, timestamp: timestamp ... 6 more fields]\n"
       ]
      },
      "metadata": {},
@@ -119,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "[timestamp: timestamp, tweet: string ... 6 more fields]"
+       "[tweet: string, timestamp: timestamp ... 6 more fields]"
       ]
      },
      "execution_count": 5,
@@ -163,7 +163,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: Compile Error\n",
+       "Message: <console>:39: error: stable identifier required, but this.$line7$read.spark.implicits found.\n",
+       "       import spark.implicits._\n",
+       "                    ^\n",
+       "\n",
+       "StackTrace: "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spark.implicits._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -171,10 +196,10 @@
     {
      "data": {
       "text/plain": [
-       "org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@689bcde"
+       "org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7c45144f"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,10 +237,10 @@
     "    cleanProbability.write.mode(\"append\").format(\"console\").save()\n",
     "    \n",
     "    val windowCount = batchDF\n",
-    "        .withWatermark(\"timestamp\", \"1 minute\")\n",
-    "        .groupBy(window($\"timestamp\", \"1 minute\", \"1 minute\"), $\"prediction\")\n",
+    "        .withWatermark(\"timestamp\", \"20 seconds\")\n",
+    "        .groupBy(window($\"timestamp\", \"10 seconds\", \"1 seconds\"), $\"prediction\")\n",
     "        .count()\n",
-    "    windowCount.write.mode(\"complete\").format(\"console\").save()\n",
+    "    windowCount.write.mode(\"append\").format(\"console\").save()\n",
     "    \n",
     "    batchDF.unpersist()\n",
     "}.start()"
