Add terminate command.

--- a/spark_ml/notebooks/apply_model.ipynb
+++ b/spark_ml/notebooks/apply_model.ipynb
@@ -164,45 +164,10 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name: Compile Error\n",
-       "Message: <console>:39: error: stable identifier required, but this.$line7$read.spark.implicits found.\n",
-       "       import spark.implicits._\n",
-       "                    ^\n",
-       "\n",
-       "StackTrace: "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import spark.implicits._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7c45144f"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -225,8 +190,171 @@
       "|0.44409918165014944|\n",
       "| 0.5115763550216391|\n",
       "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|    5|\n",
+      "|[2020-01-18 00:22...|       1.0|    9|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "| 0.5115763550216391|\n",
+      "| 0.4905517026720463|\n",
+      "|0.49689532645289997|\n",
+      "| 0.4967273748932942|\n",
+      "|0.45120694313256016|\n",
+      "| 0.4822831864339756|\n",
+      "| 0.4040311500186379|\n",
+      "|  0.506119085226794|\n",
+      "| 0.4890505295168118|\n",
+      "| 0.4697388308104415|\n",
+      "| 0.4441067980176852|\n",
+      "| 0.5372391189877216|\n",
+      "|0.47391484143806395|\n",
+      "|  0.506119085226794|\n",
+      "| 0.5053858466280851|\n",
+      "| 0.5021846446881393|\n",
+      "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|   10|\n",
+      "|[2020-01-18 00:22...|       1.0|    6|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "|0.44409918165014944|\n",
+      "|0.47814937779047684|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5204765089534942|\n",
+      "| 0.5305879579142514|\n",
+      "| 0.4953997000293138|\n",
+      "|0.44955645144499445|\n",
+      "| 0.5223154403923006|\n",
+      "| 0.5068339659549655|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5642377052119623|\n",
+      "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|    4|\n",
+      "|[2020-01-18 00:22...|       1.0|    9|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "|0.43065506498062706|\n",
+      "| 0.5020666788907716|\n",
+      "| 0.4850331154740216|\n",
+      "|0.46019280902930204|\n",
+      "| 0.5043358165073178|\n",
+      "| 0.5028892889891051|\n",
+      "| 0.5042998539611688|\n",
+      "| 0.4953997000293138|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5204765089534942|\n",
+      "| 0.5385271954132939|\n",
+      "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|    4|\n",
+      "|[2020-01-18 00:22...|       1.0|    9|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "|0.44955645144499445|\n",
+      "| 0.5182031702773544|\n",
+      "| 0.4390023330524043|\n",
+      "| 0.4850944328772012|\n",
+      "|0.44409918165014944|\n",
+      "| 0.4966278802869322|\n",
+      "|0.44010010485350415|\n",
+      "| 0.5095230413582319|\n",
+      "| 0.4844679086450901|\n",
+      "| 0.4662135833681075|\n",
+      "| 0.5236604400721994|\n",
+      "|0.49086827904603486|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5305879579142514|\n",
+      "|0.49674076275664925|\n",
+      "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|   10|\n",
+      "|[2020-01-18 00:22...|       1.0|    5|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "|0.46571175919365926|\n",
+      "|0.48701127465081023|\n",
+      "| 0.5115763550216391|\n",
+      "|0.43409476173192985|\n",
+      "|0.49674076275664925|\n",
+      "| 0.5439844652081389|\n",
+      "| 0.5095618572557075|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "|  0.480477916181103|\n",
+      "+-------------------+\n",
+      "\n",
+      "+--------------------+----------+-----+\n",
+      "|              window|prediction|count|\n",
+      "+--------------------+----------+-----+\n",
+      "|[2020-01-18 00:22...|       0.0|    5|\n",
+      "|[2020-01-18 00:22...|       1.0|    5|\n",
+      "+--------------------+----------+-----+\n",
+      "\n",
+      "+-------------------+\n",
+      "|  clean_probability|\n",
+      "+-------------------+\n",
+      "| 0.5629960681007511|\n",
+      "|  0.506119085226794|\n",
+      "| 0.4850944328772012|\n",
+      "|0.44955645144499445|\n",
+      "|0.44409918165014944|\n",
+      "| 0.5245404655708092|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.5115763550216391|\n",
+      "| 0.4233753765344496|\n",
+      "|  0.506119085226794|\n",
+      "+-------------------+\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: java.lang.InterruptedException\n",
+       "Message: null\n",
+       "StackTrace:   at java.lang.Object.wait(Native Method)\n",
+       "  at org.apache.spark.sql.streaming.StreamingQueryManager.awaitAnyTermination(StreamingQueryManager.scala:122)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -238,20 +366,15 @@
     "    \n",
     "    val windowCount = batchDF\n",
     "        .withWatermark(\"timestamp\", \"20 seconds\")\n",
-    "        .groupBy(window($\"timestamp\", \"10 seconds\", \"1 seconds\"), $\"prediction\")\n",
+    "        .groupBy(window($\"timestamp\", \"1 minute\", \"1 minute\"), $\"prediction\")\n",
     "        .count()\n",
     "    windowCount.write.mode(\"append\").format(\"console\").save()\n",
     "    \n",
     "    batchDF.unpersist()\n",
-    "}.start()"
+    "}.start()\n",
+    "\n",
+    "spark.streams.awaitAnyTermination()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
