--- a/spark_ml/notebooks/tweet_feeder.ipynb
+++ b/spark_ml/notebooks/tweet_feeder.ipynb
@@ -148,7 +148,18 @@
       "2020-01-18T00:13:28.324Z - saved some data to the events stream!\n",
       "2020-01-18T00:13:37.146Z - saved some data to the events stream!\n",
       "2020-01-18T00:13:44.363Z - saved some data to the events stream!\n",
-      "2020-01-18T00:13:53.393Z - saved some data to the events stream!\n"
+      "2020-01-18T00:13:53.393Z - saved some data to the events stream!\n",
+      "2020-01-18T00:14:05.916Z - saved some data to the events stream!\n",
+      "2020-01-18T00:14:28.942Z - saved some data to the events stream!\n",
+      "2020-01-18T00:14:40.354Z - saved some data to the events stream!\n",
+      "2020-01-18T00:14:50.458Z - saved some data to the events stream!\n",
+      "2020-01-18T00:15:06.726Z - saved some data to the events stream!\n",
+      "2020-01-18T00:15:21.976Z - saved some data to the events stream!\n",
+      "2020-01-18T00:15:48.636Z - saved some data to the events stream!\n",
+      "2020-01-18T00:16:09.221Z - saved some data to the events stream!\n",
+      "2020-01-18T00:16:34.883Z - saved some data to the events stream!\n",
+      "2020-01-18T00:17:10.348Z - saved some data to the events stream!\n",
+      "2020-01-18T00:17:42.942Z - saved some data to the events stream!\n"
      ]
     }
    ],
@@ -175,20 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "task.cancel()"
    ]
